fix compile errors.